# fitbit_exporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_docker_image.sh  grafana_dashboard.json
config/: prometheus.yml
src/: lib.rs  main.rs
src/fitbit/: client.rs  cmd.rs  history.rs  metrics.rs  mod.rs  server.rs
