[package]
name = "fitbit_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.9"
hyper = { version = "0.14", features = ["http1", "server"] }
log = "0.4"
oauth2 = { version = "4.0", features = ["reqwest"] }
prometheus = "0.12"
# prometheus-client = "0.19.0"
prometheus-client = { path = "dependencies/client_rust" } # NOTE: check build_docker_image.sh for more context
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2"
